Issue 306: skiplinks on smaller screens
Add an ID attribute to second skiplink. Hide / show it with JS in menu.js.

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,6 +1,6 @@
-/* internet.nl
+/* http://internet.nl
    style.css
-   v6 | 201806
+   v7 | 201906
 */
 
 @font-face {
@@ -11,8 +11,8 @@
          url('/static/fonts/robotobold.ttf') format('truetype'),
          url('/static/fonts/robotobold.svg#robotobold') format('svg');
     font-weight: bold;
-    font-style: normal;
-
+	font-style: normal;
+	font-display: swap;    
 }
 
 @font-face {
@@ -23,7 +23,8 @@
          url('/static/fonts/robotoregular.ttf') format('truetype'),
          url('/static/fonts/robotoregular.svg#robotoregular') format('svg');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: swap;    
 }
 
 
@@ -575,6 +576,9 @@ article img {
 /*.blocks */
 .block a {
   color: #037584;
+}
+.block a:visited {
+	color: #470072;
 }
 .block button {
   display: block;
@@ -1269,9 +1273,6 @@ table td {
   padding: 0;
   margin: 0;
 }
-#dated-results-warning a{
-  color: #05BFD6;
-}
 
 .retest-text {
   color: #6D6D6D;
@@ -1672,6 +1673,13 @@ footer ul li:last-child {
     padding-bottom: .5em;
   }
 
+  .hall-of-fame main ol {
+	list-style-position: inside;	
+  }
+	.hall-of-fame main li {
+		text-overflow: ellipsis; 
+	}
+  .hall-of-fame main ol,
   .hall-of-fame main ul {
     -webkit-column-count: 3;
     -moz-column-count: 3;
